# API-Lexia

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements-ml.txt  requirements.txt
alembic/: env.py
docker/: .env.example  Dockerfile.api  Dockerfile.llm  Dockerfile.stt  Dockerfile.test  Dockerfile.worker  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  init-db.sql
docker/scripts/: llm-entrypoint.sh  stt-entrypoint.sh
docs/: API.md  DEPLOYMENT.md  PRODUCTION_CHECKLIST.md  RUNPOD.md  _config.yml
scripts/: audit.sh  create_api_key.py  test_endpoints.sh
src/: __init__.py
src/api/: __init__.py  main.py
src/api/routers/: diarization.py  jobs.py  llm.py  stt.py
src/core/: __init__.py  auth.py  config.py  exceptions.py  logging.py  rate_limit.py
src/db/: __init__.py  models.py  session.py
src/db/repositories/: __init__.py  api_key.py  job.py  transcription.py
src/models/: __init__.py  common.py  jobs.py  llm.py  stt.py
src/services/: __init__.py
src/services/diarization/: __init__.py  base.py  factory.py  mock_backend.py  pyannote_backend.py
src/services/llm/: __init__.py  base.py  factory.py  mock_backend.py  vllm_backend.py
src/services/storage/: __init__.py  base.py  factory.py  local.py  s3.py
src/services/stt/: __init__.py  base.py  factory.py  mock_backend.py  server.py  whisper_backend.py
src/workers/: __init__.py  celery_app.py
src/workers/tasks/: diarization.py  transcription.py  webhooks.py
tests/: __init__.py  conftest.py  test_api_comprehensive.py  test_health.py  test_llm.py
tests/load/: locustfile.py
