[project]
name = "lexia-api"
version = "1.0.0"
description = "Production-ready API for LLM inference, Speech-to-Text and Speaker Diarization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Lexia Team", email = "contact@lexia.fr"}
]
keywords = ["llm", "stt", "diarization", "api", "vllm", "whisper", "pyannote"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # API Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",

    # Database
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",

    # Task Queue
    "celery[redis]>=5.3.6",
    "redis>=5.0.1",

    # Storage
    "boto3>=1.34.0",
    "aiofiles>=23.2.1",

    # Validation & Serialization
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # HTTP Client
    "httpx>=0.26.0",
    "aiohttp>=3.9.0",

    # Audio Processing
    "librosa>=0.10.1",
    "soundfile>=0.12.1",
    "pydub>=0.25.1",

    # Utilities
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "tenacity>=8.2.3",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
llm = [
    "vllm>=0.3.0",
    "torch>=2.1.0",
    "transformers>=4.37.0",
]
stt = [
    "openai-whisper>=20231117",
    "faster-whisper>=0.10.0",
    "transformers>=4.37.0",
    "torch>=2.1.0",
]
diarization = [
    "pyannote.audio>=3.1.0",
    "torch>=2.1.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
all = [
    "lexia-api[llm,stt,diarization,dev]",
]

[project.scripts]
lexia-api = "src.api.main:main"
lexia-worker = "src.workers.celery_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "redis.*",
    "boto3.*",
    "botocore.*",
    "librosa.*",
    "soundfile.*",
    "pydub.*",
    "vllm.*",
    "pyannote.*",
    "whisper.*",
    "faster_whisper.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["src/workers/*", "tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
